fix: katex width overflow

--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -267,4 +267,10 @@
   .katex {
     color: var(--color-foreground);
   }
+
+  .katex-display {
+    overflow-x: auto;
+    overflow-y: hidden;
+    white-space: nowrap;
+  }
 }
